# moab-diy

./: CMakeLists.txt  README.md  create-env.sh  env.yaml  load-env.sh  repo.yaml
src/: CMakeLists.txt  main.cpp  main.hpp  mesh_gen.cpp
