set                         (targets    main)

foreach                     (t ${targets})
  add_executable            (${t} ${t}.cpp mesh_gen.cpp)
  target_link_libraries     (${t} ${libraries})
endforeach                  ()

install                     (TARGETS
                            main
                            DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
                            PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
                            GROUP_READ GROUP_WRITE GROUP_EXECUTE
                            WORLD_READ WORLD_WRITE WORLD_EXECUTE)
